tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/quoted-unclosed-2.stderr
TOML parse error at line 1, column 5
  |
1 | "key
  |     ^
invalid basic string
